--- a/Final_Report/cs682_final_report.tex
+++ b/Final_Report/cs682_final_report.tex
@@ -115,12 +115,12 @@ As mentioned above, once the automobile network was established, its architectur
 
 To effectively evaluate the final test results, the accuracies of each of the one-vs-all classifiers were tracked along with the overall accuracy of the ensemble on the test data. To test the validity of this structure against a standard approach to image classification, we designed a standard CNN to compare the test accuracy against. The CNN is thirteen layers deep and recognizes images from all ten classes at once. This network utilized the ReLU activation function between every layer and dropout and batch normalization were alternatingly used in between each layer. A max pooling layer was used after every fourth convolution.
 
-The total number of unlabeled images produced by the ensemble was collected to assess how unlabeled images affect the results, as well as the number of unlabeled images produced per class to see how the individual accuracies of each network affected the number of unlabeled images for that class. An image that not recognized by the classifier corresponding to the true class of the image is considered a false negative prediction by the ensemble. The only way an image can go unlabeled is if it is predicted as a false negative by its respective classifier and every other classifier does not recognize it. Analysis of which images are frequently considered false negatives by their respective class can provide insight into which images are consistently going unlabeled by the ensemble, so a set of false negative images was produced to give a window into the issues caused by unlabeled images. A false positive prediction occurs when an image is recognized by a classifier not matching the class of the image. During the process of combining the results, images that were recognized by multiple classifiers are said to have a collision.  Collisions can only occur if the image is recognized by the classifier matching the class of the image and at least one other classifier predicted that image as a false positive, or the image is classified as a false negative by its respective classifier and at least two other classifiers predicted that image as a false positive. Due to false negatives relationship to collisions an image set was created to show examples of false negatives produced by the ensemble for each class.
+The total number of unlabeled images produced by the ensemble was collected to assess how unlabeled images affect the results, as well as the number of unlabeled images produced per class to see how the individual accuracies of each network affected the number of unlabeled images for that class. An image not recognized by the classifier corresponding to the true class of the image is considered a false negative prediction by the ensemble. The only way an image can go unlabeled is if it is predicted as a false negative by its respective classifier and every other classifier does not recognize it. Analysis of which images are frequently considered false negatives by their respective class can provide insight into which images are consistently going unlabeled by the ensemble, so a set of false negative images was produced to give a window into the issues caused by unlabeled images. A false positive prediction occurs when an image is recognized by a classifier not matching the class of the image. During the process of combining the results, images that were recognized by multiple classifiers are said to have a collision.  Collisions can only occur if the image is recognized by the classifier matching the class of the image and at least one other classifier predicted that image as a false positive, or the image is classified as a false negative by its respective classifier and at least two other classifiers predicted that image as a false positive. Due to false negatives relationship to collisions an image set was created to show examples of false negatives produced by the ensemble for each class.
 
 \begin{figure}[H]
 	\begin{table}[H]
 		\begin{tabular}{llll}
-			\textbf{Class} & \textbf{\begin{tabular}[c]{@{}l@{}}Test\\ Accuracy\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}No.\\ Unlabeled\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}\% of Total\\ Unlabeled\end{tabular}} \\
+			\textbf{Class} & \textbf{\begin{tabular}[c]{@{}l@{}}Test\\ Accuracy(\%)\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}No.\\ Unlabeled\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}\% of Total\\ Unlabeled\end{tabular}} \\
 			Airplane       & 95.73                                                            & 270                                                              & 13.20                                                                    \\
 			Automobile     & 97.62                                                            & 117                                                              & 5.72                                                                     \\
 			Bird           & 95.08                                                            & 160                                                              & 7.82                                                                     \\
@@ -136,9 +136,9 @@ The total number of unlabeled images produced by the ensemble was collected to a
 	\caption{One-vs-All Classifier Results}
 \end{figure}
 
-The final ensemble achieved an accuracy of 71.01\% on the 10,000 test images.  Each of the one-vs-all classifiers was able to achieve an accuracy over 95\%, except for the classifier designed to recognize cats which achieved an accuracy of 93.09\%. A lot of time was spent pushing this classifier to achieve an accuracy above 93\%. As mentioned, the goal was to have each individual classifier attain an accuracy over 95\%. Some networks were faster to build as their they reached accuracies above 95\% with ease, while others took significant amounts of time to develop and finetune, but they still were able to get accuracies above 95\%. Once the other nine networks passed the threshold of 95\% accuracy and a significant amount of time was spent increasing the performance of the cat classifier from 91\% to 93\%, we decided that the classifiers were accurate enough to collect results and draw conclusions from. Treating this network as an outlier, the average performance of the five remaining networks was 96.28\% with accuracy ranging from 95.08\% (bird classifier) to 97.62\%(automobile classifier). The standard CNN that was constructed was able to achieve an accuracy 81.03\% on the test data.
+The final ensemble achieved an accuracy of 71.01\% on the 10,000 test images.  Each of the one-vs-all classifiers was able to achieve an accuracy over 95\%, except for the classifier designed to recognize cats which achieved an accuracy of 93.09\%. A lot of time was spent pushing this classifier to achieve an accuracy above 93\%. As mentioned, the goal was to have each individual classifier attain an accuracy over 95\%. Some networks were faster to build as they reached accuracies above 95\% with ease, while others took significant amounts of time to develop and finetune, but they still were able to get accuracies above 95\%. Once the other nine networks passed the threshold of 95\% accuracy and a significant amount of time was spent increasing the performance of the cat classifier from 91\% to 93\%, we decided that the classifiers were accurate enough to collect results and draw conclusions from. Treating this network as an outlier, the average performance of the nine remaining networks was 96.28\% with accuracy ranging from 95.08\% (bird classifier) to 97.62\%(automobile classifier). The standard CNN that was constructed was able to achieve an accuracy of 81.03\% on the test data.
 
-When passed through the ensemble, 2,045 of the 10,000 test images went unlabeled. Since these cases are treated as an incorrect prediction, this reduced the overall accuracy of the ensemble by 20.45\%.  This means that excluding unlabeled images, the ensemble correctly label an image with an accuracy of 89.26\%. This signifies unlabeled images as the main cause for significantly lower overall accuracy. Of the 2045 unlabeled images, 327(15.99\%) of them were images of cats. The average number of unlabeled images of the other nine classes is 191(9.34\%), rounding up to the next integer. This shows that not being able to push the cat classifier as far as the other classifiers significantly reduced overall accuracy.
+When passed through the ensemble, 2,045 of the 10,000 test images went unlabeled. Since these cases are treated as an incorrect prediction, this reduced the overall accuracy of the ensemble by 20.45\%.  This means that excluding unlabeled images, the ensemble correctly labeled an image with an accuracy of 89.26\%. This signifies unlabeled images as the main cause for the significantly lower overall accuracy. Of the 2045 unlabeled images, 327(15.99\%) of them were images of cats. The average number of unlabeled images of the other nine classes is 191(9.34\%), rounding up to the next integer. This shows that not being able to push the cat classifier as far as the other classifiers significantly reduced overall accuracy.
 
 \begin{figure}[H]
 	\begin{center}
